<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:orientation="vertical"
    android:layout_width="match_parent"
    android:layout_height="wrap_content">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#d5e9e5dc"
        android:orientation="horizontal"
        android:gravity="center"
        android:layout_margin="2dp">


        <ImageView
            android:layout_width="30dp"
            android:layout_height="30dp"
            android:id="@+id/imageViewPlaceShare"
            android:src="@drawable/share"
            android:layout_margin="5dp"
            android:layout_gravity="center" />

        <ImageView
            android:layout_width="match_parent"
            android:layout_height="80dp"
            android:id="@+id/imageViewPlaceImage"
            android:layout_margin="20dp"
            android:src="@drawable/coffee_icon"
            android:layout_weight="1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_margin="20dp"
            android:layout_weight="1">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPlaceDistance"
                android:text="@string/user_to_place_distance"
                android:textColor="#03a9f4"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal"
                android:visibility="gone"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPlaceName"
                android:text="@string/place_name"
                android:textStyle="bold|italic"
                android:textColor="#000"
                android:textSize="20sp"
                android:layout_gravity="center_horizontal"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:id="@+id/textViewPlaceAddres"
                android:text="@string/place_address"
                android:textColor="#000"
                android:textSize="15sp"
                android:layout_gravity="center_horizontal" />


        </LinearLayout>

    </LinearLayout>

</LinearLayout>